--- a/src/index.scss
+++ b/src/index.scss
@@ -1,25 +1,24 @@
 @font-face {
   font-family: 'Montserrat-Bold';
-  src: url('./assets/fonts/Montserrat-Bold.ttf') format('truetype');
-  font-weight: bold;
+  src: url('./app/assets/fonts/Montserrat-Bold.ttf') format('truetype');
+  font-weight: bolder;
   font-style: normal;
 }
 @font-face {
   font-family: 'Montserrat-Regular';
-  src: url('./assets/fonts/Montserrat-Regular.ttf') format('truetype');
+  src: url('./app/assets/fonts/Montserrat-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'Montserrat-Medium';
-  src: url('./assets/fonts/Montserrat-Medium.ttf') format('truetype');
-  font-weight: lighter;
+  src: url('./app/assets/fonts/Montserrat-Medium.ttf') format('truetype');
+  font-weight: bold;
   font-style: normal;
 }
 
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 
 body {
-  padding: 10vh 10vw;
-  font-family: Montserrat;
+  font-family: Montserrat-Regular;
 }
