--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,4 +1,13 @@
 .app-component {
+  .is-invalid-input {
+    border: 1px solid #ff3636;
+    box-shadow: 0 0 2px #ff3636;
+  }
+
+  .success-border {
+    border: 1px solid #28a745;
+  }
+
   .loader,
   .loader:before,
   .loader:after {
