--- a/src/app/page/home/blogList/blogItem/blogItem.scss
+++ b/src/app/page/home/blogList/blogItem/blogItem.scss
@@ -1,11 +1,9 @@
 .blog-item-component {
-  div {
-    .card {
-      transition: width ease-out 1000ms;
-    }
-    .card:hover {
-      box-shadow: 0px 5px 10px #dedede;
-      width: 105%;
-    }
+  > div {
+    transition: padding linear 100ms;
+  }
+  > div:hover {
+    box-shadow: 0px 5px 10px #dedede;
+    padding: 0;
   }
 }
